  * Added ``computed_duration``.
  
* Task:
  * Arranged the TaskJuggler workflow.
  * The task will use the effort > length > duration attributes in `to_tjp`
    property.

* Changed the license of Stalker from BSD-2 to LGPL 2.1. Any version previous
  to 0.2.0.a9 will be still BSD-2 and any version from and including 0.2.0.a9
  will be distributed under LGPL 2.1 license.

* Started designing the TaskJugglerScheduler.

0.2.0.a8
--------

* TagSelect now can be filled by setting its ``value`` attribute (Ex:
  TagSelect.set('value', data))
  
* Fixed Projects menu in base.jinja2, the link is now updating correctly when a
  new project is added.

* Added a new method called ``is_root`` to Task class. It is true for tasks
  where there are no parents.

* Added a new attribute called ``users`` to the Department class which is a
  synonym for the ``members`` attribute.

* Task:
  * Task class is now preventing one of the dependents to be set as the parent
    of a task.
  * Task class is now preventing one of the parents to be set as the one of the
    dependents of a task.
  * Fixed ``autoflush`` bugs in Task class.

* Fixed `admin` users department initialization.

* Added ``thumbnail`` attribute to the SimpleEntity class which is a reference
  to a Link instance, showing the path of the thumbnail.

* Fixed Circular Dependency bug in Task class, where a parent of a newly
  created task is depending to another task which is set as the dependee for
  this newly created task (T1 -> T3 -> T2 -> T1 (parent relation) -> T3 -> T2
  etc.).

* jQueryGantt: Moving any child task will adjust the parent start and end dates
  so they fit to the children.

0.2.0.a7
--------

* Changed these default setting value names to corresponding new names:
  * ``DEFAULT_TASK_DURATION`` -> ``TASK_DURATION``
  * ``DEFAULT_TASK_PRIORITY`` -> ``TASK_PRIORITY``
  * ``DEFAULT_VERSION_TAKE_NAME`` -> ``VERSION_TAKE_NAME``
  * ``DEFAULT_TICKET_LABEL`` -> ``TICKET_LABEL``