@@ -170,9 +170,9 @@ TJP_WORKING_HOURS_TEMPLATE = """{% macro wh(wh, day) -%}
 {{wh(workinghours, 'sat')}}
 {{wh(workinghours, 'sun')}}"""
 
-TJP_PROJECT_TEMPLATE = """project {{ project.tjp_id }} "{{ project.name }}" {{ project.start.date() }} {{ project.end.date() }} {
-    {{ '%i'|format(project.timing_resolution.total_seconds()//60|int) }}min
-    now {{ datetime.datetime.now().strftime('%Y-%m-%d-%H:%M') }}
+TJP_PROJECT_TEMPLATE = """project {{ project.tjp_id }} "{{ project.name }}" {{ project.start.date() }} - {{ project.end.date() }} {
+    timingresolution {{ '%i'|format(project.timing_resolution.total_seconds()//60|int) }}min
+    now {{ now }}
     dailyworkinghours {{ project.daily_working_hours }}
     weekstartsmonday
 {{ project.working_hours.to_tjp }}
@@ -207,31 +207,33 @@ TJP_DEPARTMENT_TEMPLATE = '''resource {{department.tjp_id}} "{{department.name}}
 {%- endfor %}
 }'''
 
-TJP_USER_TEMPLATE = '''resource {{user.login}} "{{user.name}}"'''
+TJP_USER_TEMPLATE = '''resource {{user.tjp_id}} "{{user.name}}"'''
 
-TJP_MAIN_TEMPLATE = """# Generated By Stalker v{{stalker.version}}
+TJP_MAIN_TEMPLATE = """# Generated By Stalker v{{stalker.__version__}}
 {{project.to_tjp}}
 
-{# resources #}
+# resources
 resource resources "Resources" {
-    {% for department in departments %}
-        {{department.to_tjp}}
-    {% endfor %}
-    # list users with no departments
-    
-    resource no_dep "No Departments" {
-        {% for user in no_dep_users %}
-            {{user.to_tjp}}
-        {% endfor %}
-    }
+{%- for user in users %}
+    {{user.to_tjp}}
+{%- endfor %}
 }
 
-{# tasks #}
-task {{project.code}} "{{project.name}}"{
+# tasks
+task {{project.tjp_id}} "{{project.name}}"{
     {% for task in project.root_tasks %}
-    {{task.tjp}}
+    {{task.to_tjp}}
     {% endfor %}
 }
 
-{# bookings #}
+# bookings
+
+# reports
+taskreport breakdown "{{csv_file_full_path}}"{
+    formats csv
+    timeformat "%Y-%m-%d-%H:%M"
+    columns id, start, end
+}
 """
+
+TJ_COMMAND = '/usr/local/bin/tj3'
