@@ -27,8 +27,12 @@
                 margin-left: -125px;
                 height: 136px;
                 margin-top: -68px;'>
-      <div class='dijitDialogPaneContentArea' style='background-color: #808080; height:100px; color:#ffffff'>
-        <form id='login_form_div' style='clear:both'>
+      <div class='dijitDialogPaneContentArea'
+           style='background-color: #808080;
+                  height:auto;
+                  color:#ffffff;
+                  border-radius: 10px;'>
+        <form id='login_form_div' style='clear:both;'>
           <br/>
           <h3 style='text-align: center; color:#ffffff;'><b>Login To Stalker</b></h3>
           <table>
