@@ -79,8 +79,8 @@
   <div id='appLayout' class='demoLayout'>
     <div id='header' class='edgePanel' style="overflow: hidden">
     {% block header %}
-      <div id='stalker_logo' style='font-size: 20px; color: #ff0000'>
-        <a href="/"  style='color: #000000'>STALKER________</a>
+      <div id='stalker_logo'>
+        <a href="/"  style='color: #000000'>STALKER</a>
       </div>
 
       <div id='stalkerMenuBar' style='color: #000000'>
