@@ -18,10 +18,17 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301 USA
 
+
+
 import unittest
+import datetime
+import os
 from zope.sqlalchemy import ZopeTransactionExtension
 from stalker import db, Department, User, Project, Repository, Status, StatusList, Task
+import stalker
 from stalker.db import DBSession
+from stalker.models.schedulers import TaskJugglerScheduler
+
 
 
 class TaskJugglerSchedulerTester(unittest.TestCase):
@@ -49,6 +56,8 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             'sqlalchemy.echo': False
         })
         
+        # replace datetime now function
+        
         # create departments
         self.test_dep1 = Department(name='Dep1')
         self.test_dep2 = Department(name='Dep2')
@@ -61,6 +70,7 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             password='1234',
             departments=[self.test_dep1]
         )
+        DBSession.add(self.test_user1)
         
         self.test_user2 = User(
             login='user2',
@@ -69,6 +79,7 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             password='1234',
             departments=[self.test_dep1]
         )
+        DBSession.add(self.test_user2)
         
         self.test_user3 = User(
             login='user3',
@@ -77,6 +88,7 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             password='1234',
             departments=[self.test_dep2]
         )
+        DBSession.add(self.test_user3)
         
         self.test_user4 = User(
             login='user4',
@@ -85,7 +97,9 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             password='1234',
             departments=[self.test_dep2]
         )
+        DBSession.add(self.test_user4)
         
+        # user with two departments
         self.test_user5 = User(
             login='user5',
             name='User5',
@@ -93,6 +107,16 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             password='1234',
             departments=[self.test_dep1, self.test_dep2]
         )
+        DBSession.add(self.test_user5)
+        
+        # user with no departments
+        self.test_user6 = User(
+            login='user6',
+            name='User6',
+            email='user6@users.com',
+            password='1234'
+        )
+        DBSession.add(self.test_user6)
         
         # repository
         self.test_repo = Repository(
@@ -101,6 +125,7 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             windows_path='T:/',
             osx_path='/Volumes/T/'
         )
+        DBSession.add(self.test_repo)
         
         # statuses
         self.test_status1 = Status(name='Status 1', code='STS1')
@@ -108,6 +133,11 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
         self.test_status3 = Status(name='Status 3', code='STS3')
         self.test_status4 = Status(name='Status 4', code='STS4')
         self.test_status5 = Status(name='Status 5', code='STS5')
+        DBSession.add_all([self.test_status1,
+                           self.test_status2,
+                           self.test_status3,
+                           self.test_status4,
+                           self.test_status5])
         
         # status lists
         self.test_proj_status_list = StatusList(
@@ -115,32 +145,151 @@ class TaskJugglerSchedulerTester(unittest.TestCase):
             statuses=[self.test_status1, self.test_status2, self.test_status3],
             target_entity_type='Project'
         )
+        DBSession.add(self.test_proj_status_list) 
         
         # create one project
         self.test_proj1 = Project(
             name='Test Project 1',
             code='TP1',
             repository=self.test_repo,
-            status_list=self.test_proj_status_list
+            status_list=self.test_proj_status_list,
+            start=datetime.datetime(2013, 4, 4),
+            end = datetime.datetime(2013, 5, 4)
         )
+        DBSession.add(self.test_proj1)
+        self.test_proj1.now = datetime.datetime(2013, 4, 4)
         
+        # create task status list
         self.test_task_status_list = StatusList(
             name='Task Statuses',
             statuses=[self.test_status4, self.test_status5],
             target_entity_type='Task'
         )
+        DBSession.add(self.test_task_status_list)
         
         # create tasks
         self.test_task1 = Task(
             name='Task1',
             project=self.test_proj1,
             resources=[self.test_user1, self.test_user2],
-            effort=50
+            effort=50,
+            status_list=self.test_task_status_list
+        )
+        DBSession.add(self.test_task1)
+        DBSession.commit()
+    
+    def test_tjp_file_is_created(self):
+        """testing if the tjp file is correctly created
+        """
+        # create the scheduler
+        tjp_sched = TaskJugglerScheduler()
+        tjp_sched.projects = [self.test_proj1]
+        
+        tjp_sched._create_tjp_file()
+        
+        # check
+        self.assertTrue(os.path.exists(tjp_sched.tjp_file_full_path))
+        
+        # clean up the test
+        tjp_sched._clean_up()
+    
+    def test_tjp_file_content_is_correct(self):
+        """testing if the tjp file content is correct
+        """
+        tjp_sched = TaskJugglerScheduler()
+        tjp_sched.projects = [self.test_proj1]
+        
+        tjp_sched._create_tjp_file()
+        tjp_sched._create_tjp_file_content()
+        
+        import jinja2
+        expected_tjp_template = jinja2.Template(
+        """# Generated By Stalker v{{stalker.__version__}}
+project Project_30 "Test Project 1" 2013-04-04 - 2013-05-04 {
+    timingresolution 60min
+    now {{now}}
+    dailyworkinghours 8
+    weekstartsmonday
+    workinghours mon 09:30 - 18:30
+    workinghours tue 09:30 - 18:30
+    workinghours wed 09:30 - 18:30
+    workinghours thu 09:30 - 18:30
+    workinghours fri 09:30 - 18:30
+    workinghours sat off
+    workinghours sun off
+    timeformat "%Y-%m-%d"
+    scenario plan "Plan"
+    trackingscenario plan
+}
+
+# resources
+resource resources "Resources" {
+    resource User_3 "Admin"
+    resource User_14 "User1"
+    resource User_16 "User2"
+    resource User_17 "User3"
+    resource User_19 "User4"
+    resource User_20 "User5"
+    resource User_21 "User6"
+}
+
+# tasks
+task Project_30 "Test Project 1"{
+    
+    task Task_31 "Task1" {
+    effort 50h
+    allocate User_14, User_16
+}
+    
+}
+
+# bookings
+
+# reports
+taskreport breakdown "{{csv_path}}"{
+    formats csv
+    timeformat "%Y-%m-%d-%H:%M"
+    columns id, start, end
+}""")
+        expected_tjp_content = expected_tjp_template.render(
+            {
+                'stalker': stalker,
+                'now': self.test_proj1.round_time(self.test_proj1.now)
+                            .strftime('%Y-%m-%d-%H:%M'),
+                'csv_path': tjp_sched.temp_file_full_path
+            }
         )
         
-    def test_setup(self):
-        """is setup working
+        self.maxDiff = None
+        tjp_sched._clean_up()
+        self.assertEqual(tjp_sched.tjp_content, expected_tjp_content)
+    
+    def test_tasks_are_correctly_scheduled(self):
+        """testing if the tasks are correctly scheduled
         """
-        pass
+        tjp_sched = TaskJugglerScheduler()
+        tjp_sched.projects = [self.test_proj1]
+        tjp_sched.schedule()
         
+        # check the task and project timings are all adjusted
+        self.assertEqual(
+            self.test_proj1.computed_start,
+            datetime.datetime(2013, 4, 4, 10, 0)
+        )
+        
+        self.assertEqual(
+            self.test_proj1.computed_end,
+            datetime.datetime(2013, 4, 8, 17, 0)
+        )
+        
+        self.assertEqual(
+            self.test_task1.computed_start,
+            datetime.datetime(2013, 4, 4, 10, 0)
+        )
+        self.assertEqual(
+            self.test_task1.computed_end,
+            datetime.datetime(2013, 4, 8, 17, 0)
+        )
+        
+    
         
